# xgs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  rebuild.sh  remove_bin.sh  server.sln
common/database/: DataStorage.h  DataStore.h
common/logic/: GenGUID.cpp  GenGUID.h  ServerManager.cpp  ServerManager.h  ServerNode.h  ServerNodeContainer.cpp  ServerNodeContainer.h  ServerNodeImpl.cpp  ServerNodeImpl.h  ServerNodeMacros.h  ServerType.h  t_guid_serial.h  t_player_of_user.h  t_server.h  t_server_cache.cpp  t_server_cache.h  t_user.h
common/net/: NetHeartbeat.cpp  NetHeartbeat.h
game/: CMakeLists.txt  game.vcxproj  game.vcxproj.filters  rebuild.sh
game/config/: SystemConfig.cpp  SystemConfig.h
game/logic/: FeedbackHandler.cpp  FeedbackHandler.h  GameDataHandler.cpp  GameDataHandler.h  HandleMsgMacros.h  LoginHandler.cpp  LoginHandler.h  MailHandler.cpp  MailHandler.h  Player.cpp  Player.h  PlayerFactory.h  PlayerManager.cpp  PlayerManager.h  PlayerMapping.cpp  PlayerMapping.h  ScriptHandler.cpp  ScriptHandler.h  t_player.h  t_player_feedback.h  t_player_level.h  t_player_mail.h
game/main/: DatabaseModule.cpp  DatabaseModule.h  GameServer.cpp  GameServer.h  LogicModule.cpp  LogicModule.h  NetworkModule.cpp  NetworkModule.h  ResourceModule.cpp  ResourceModule.h  main.cpp
game/network/: from_client_session.cpp  from_client_session.h  from_gws_session.cpp  from_gws_session.h  to_ws_session.cpp  to_ws_session.h
game/pbconfig/: game.conf.pb.cc  game.conf.pb.h
game/protos/: feedback.pb.cc  feedback.pb.h  gamedata.pb.cc  gamedata.pb.h  login2game.pb.h  mail.pb.cc  mail.pb.h  meta.pb.h
gate/: CMakeLists.txt  clear_cmake.sh  gate.vcxproj  gate.vcxproj.filters
gate/config/: GameConfig.cpp  GameConfig.h  SystemConfig.cpp  SystemConfig.h
gate/logic/: HandleMsgMacros.h  LoginHandler.cpp  LoginHandler.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h
gate/main/: DatabaseModule.h  GateServer.cpp  GateServer.h  LogicModule.cpp  LogicModule.h  NetworkModule.cpp  NetworkModule.h  ResourceModule.cpp  ResourceModule.h  main.cpp
link/: CMakeLists.txt  build.sh  link.vcxproj  link.vcxproj.filters
login/: CMakeLists.txt  login.vcxproj  login.vcxproj.filters
mongodb/: mongod.conf  mongodb.conf  start.sh  stop.sh
mongodb/4/: stop.sh  (+2 more)
protos/: core.proto  feedback.proto  gamedata.proto  gen.bat  gen_cpp.bat  gen_sdk.bat  link2ls_meta.proto  login.proto  login2game.proto  login2sdk.proto  mail.proto  meta.proto  verify.proto
sdk/: CMakeLists.txt  sdk.vcxproj  sdk.vcxproj.filters
sdk/config/: SystemConfig.cpp  SystemConfig.h
sdk/logic/: LoginHandler.cpp  LoginHandler.h
sdk/main/: DatabaseModule.cpp  DatabaseModule.h  LogicModule.cpp  LogicModule.h  NetworkModule.cpp  NetworkModule.h  ResourceModule.cpp  ResourceModule.h  SdkServer.cpp  SdkServer.h  main.cpp
sdk/network/: from_ls_session.cpp  from_ls_session.h  from_plat_httpsession.cpp  from_plat_httpsession.h  from_ws_session.cpp  from_ws_session.h  to_plat_httpsession.cpp  to_plat_httpsession.h  to_tzplat_httpsession.cpp  to_tzplat_httpsession.h
sdk/pbconfig/: sdk.conf.pb.cc  sdk.conf.pb.h  wxappinfo.conf.pb.cc  wxappinfo.conf.pb.h
world/: CMakeLists.txt  world.vcxproj  world.vcxproj.filters
(+136 files in other folders)
